--- a/website/login/loginpage.html
+++ b/website/login/loginpage.html
@@ -4,7 +4,7 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=login" />
   <link href="https://fonts.googleapis.com/css2?family=Parkinsans:wght@300..800&family=Playpen+Sans:wght@100..800&family=Space+Grotesk:wght@300..700&display=swap" rel="stylesheet">
   <meta charset="UTF-8">
-  <script src="logic.js"></script>
+  <script type="module" src="logic.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/appwrite@16.0.2"></script>
 <script>
     const { Client } = Appwrite;
