--- a/website/login/loginpage.html
+++ b/website/login/loginpage.html
@@ -9,7 +9,7 @@
 
   <link rel="stylesheet" href="signuppage.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script type="module" src="logic.js"></script>
+  <script type="script" src="logic.js"></script>
   <title>Level-Up | Academy</title>
   <style>
   
