--- a/website/login/loginpage.html
+++ b/website/login/loginpage.html
@@ -4,13 +4,11 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=login" />
   <link href="https://fonts.googleapis.com/css2?family=Parkinsans:wght@300..800&family=Playpen+Sans:wght@100..800&family=Space+Grotesk:wght@300..700&display=swap" rel="stylesheet">
   <meta charset="UTF-8">
-  <script type="module" src="https://www.gstatic.com/firebasejs/10.5.0/firebase-app.js"></script>
-<script type="module" src="https://www.gstatic.com/firebasejs/10.5.0/firebase-auth.js"></script>
-
+ 
 
   <link rel="stylesheet" href="signuppage.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script type="module" src="logic.js"></script>
+  <script type="module" src="logic.js" defer></script>
   <title>Level-Up | Academy</title>
   <style>
   
