--- a/website/forum.html
+++ b/website/forum.html
@@ -131,6 +131,11 @@
     .comment-form button:hover {
       background: #ffd54f; /* Lighter Yellow */
     }
+    .coments{
+      color: #f4b400;
+      font-size: 1rem;
+      font-weight: bold;
+    }
    
   
   </style>
@@ -167,6 +172,7 @@
      
       <h2>Welcome to the Forum!</h2>
       <p>Welcome to the LevelUp Academy Forum! This is a place where you can discuss your favorite coding topics, web development, app creation, and more. Whether you’re a beginner or an expert, there’s always something new to learn. Please feel free to share your thoughts, ask questions, and help others in the community.</p>
+      <span class="coment">Comments</span>
       <div class="comments" id="comments-post1"></div>
       <div class="comment-form">
         <input type="text" id="comment-input-post1" placeholder="Add a comment..." />
@@ -179,6 +185,7 @@
       <!-- <img src="https://via.placeholder.com/800x400/8c8c8c/fff?text=Flutter+vs+React+Native" alt="Post Image"> -->
       <h2>Flutter vs React Native</h2>
       <p>Which mobile development framework do you prefer and why? In this post, we’ll be comparing Flutter and React Native, two of the most popular frameworks for cross-platform mobile development. Each framework has its strengths, and depending on the use case, one might be better than the other. Let’s dive into the differences and similarities!</p>
+      <span class="coment">Comments</span>
       <div class="comments" id="comments-post2"></div>
       <div class="comment-form">
         <input type="text" id="comment-input-post2" placeholder="Add a comment..." />
