--- a/website/forum.html
+++ b/website/forum.html
@@ -131,7 +131,7 @@
     .comment-form button:hover {
       background: #ffd54f; /* Lighter Yellow */
     }
-    #coments{
+    #coment{
       color: #f4b400;
       font-size: 1rem;
       font-weight: bold;
