--- a/website/forum.html
+++ b/website/forum.html
@@ -133,7 +133,7 @@
     }
     #coment{
       color: #f4b400;
-      font-size: 1rem;
+      font-size: 1.2rem;
       font-weight: bold;
     }
    
@@ -172,7 +172,7 @@
      
       <h2>Welcome to the Forum!</h2>
       <p>Welcome to the LevelUp Academy Forum! This is a place where you can discuss your favorite coding topics, web development, app creation, and more. Whether you’re a beginner or an expert, there’s always something new to learn. Please feel free to share your thoughts, ask questions, and help others in the community.</p>
-      <span id="coment">Comments</span>
+      <span id="coment">Comments:</span>
       <div class="comments" id="comments-post1"></div>
       <div class="comment-form">
         <input type="text" id="comment-input-post1" placeholder="Add a comment..." />
@@ -185,7 +185,7 @@
       <!-- <img src="https://via.placeholder.com/800x400/8c8c8c/fff?text=Flutter+vs+React+Native" alt="Post Image"> -->
       <h2>Flutter vs React Native</h2>
       <p>Which mobile development framework do you prefer and why? In this post, we’ll be comparing Flutter and React Native, two of the most popular frameworks for cross-platform mobile development. Each framework has its strengths, and depending on the use case, one might be better than the other. Let’s dive into the differences and similarities!</p>
-      <span id="coment">Comments</span>
+      <span id="coment">Comments:</span>
       <div class="comments" id="comments-post2"></div>
       <div class="comment-form">
         <input type="text" id="comment-input-post2" placeholder="Add a comment..." />
