--- a/website/forum.html
+++ b/website/forum.html
@@ -27,13 +27,18 @@
       --shadow-light: rgba(255, 255, 255, 0.1);
       --shadow-dark: rgba(0, 0, 0, 0.4);
     }
-
+html{
+  padding: 0;
+  box-sizing: border-box;
+  width: fit-content;
+}
     body {
       font-family: "Playpen sans";
       background: var(--background);
       color: var(--text);
       margin: 0;
-      padding: 0%;
+      padding: 0;
+      width: fit-content;
       box-sizing: border-box;
     }
 
