--- a/website/forum.html
+++ b/website/forum.html
@@ -46,6 +46,7 @@ html{
       color: var(--highlight);
       text-align: center;
       margin-bottom: 30px;
+      padding: 0px 10px 0px 10px;
     }
 
     .post-container {
