--- a/website/forum.html
+++ b/website/forum.html
@@ -129,6 +129,7 @@ html{
       background: var(--highlight);
       color: var(--foreground);
       font-weight: bold;
+      text-decoration: none;
       cursor: pointer;
       width: fit-content;
       box-shadow: 4px 4px 8px var(--shadow-dark), -4px -4px 8px var(--shadow-light);
