--- a/website/forum.html
+++ b/website/forum.html
@@ -115,7 +115,7 @@ html{
       border-radius: 8px;
       background: var(--foreground);
       color: var(--text);
-      box-shadow: inset 4px 4px 8px var(--shadow-dark), inset -4px -4px 8px var(--shadow-light);
+      box-shadow:  4px 4px 8px var(--shadow-dark),  -4px -4px 8px var(--shadow-light);
     }
 
     .comment-form input:focus {
