--- a/website/forum.html
+++ b/website/forum.html
@@ -5,6 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>LevelUp Academy | Forum</title>
   <link rel="stylesheet" href="nav.css">
+  <meta property="og:title" content="LevelUp Academy|forum -Chat and make friends!" />
+  <meta property="og:description" content="Connect, learn, grow, and share knowledge at Level Up Academy." />
+  <meta property="og:image" content="https://levelup-academy.vercel.app/images/hero.png" />
+  <meta property="og:url" content="https://levelup-academy.vercel.app/forum.html" />
+  <meta property="og:type" content="website" />
   <link rel="apple-touch-icon" sizes="180x180" href="/images/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/images/favicon-16x16.png">
